Separar estilo do container

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:#333;font-size:28px;font-family:Arial, sans-serif;margin:0;padding:0}.meuElemento{margin:10px}
+body{background-color:#333;font-size:28px;font-family:Arial, sans-serif;margin:0;padding:0}.meuElemento{margin:10px}.simple-scroll-container{color:#333;background-color:#fff}
